...
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.Farmers.Market.SignupActivity"
    android:id="@+id/loginTable"
    android:gravity="center"
    >

    <TableRow android:gravity="center_horizontal"
        >

...
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <EditText
            android:id="@+id/usernameEditText"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            />
    </TableRow>
...
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/passwordEditText"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </TableRow>

...
            android:id="@+id/firstnameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname" />

        <EditText
            android:id="@+id/firstnameEditText"
            android:inputType="text"
            android:digits="@string/alphaSpaceDigits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            />
...
            android:id="@+id/lastnameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname" />

        <EditText
            android:id="@+id/lastnameEditText"
            android:inputType="text"
            android:digits="@string/alphaSpaceDigits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            />
...
            android:id="@+id/addressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            android:id="@+id/addressEditText"
            android:inputType="text"
            android:digits="@string/alphanumericSpaceDigits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            />
...
            android:id="@+id/cityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city" />

        <EditText
            android:id="@+id/cityEditText"
            android:inputType="text"
            android:digits="@string/alphaSpaceDigits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            />
...
            android:id="@+id/postalCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postalCode" />

        <EditText
            android:id="@+id/postalCodeEditText"
            android:inputType="text"
            android:digits="@string/alphanumericSpaceDigits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            />
...
