...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Farmers.Market.LoginActivity">

    <ImageView
        android:id="@+id/basketImage"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        android:layout_above="@id/centerLoginScreen"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/appTitle"
        style="@style/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/basketImage"/>
    <View
...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <EditText
            android:id="@+id/usernameLoginScreen"
            android:layout_width="@dimen/textFieldSize"
            android:layout_height="wrap_content"
            android:singleLine="true"
            />
    </TableRow>

...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/passwordLoginScreen"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </TableRow>
    <TableRow android:gravity="center_horizontal"
...
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginBtn" />
        <Button
            android:id="@+id/signupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpBtn" />

    </TableRow>
    </TableLayout>
...
