...
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/EdgeMargin"
        android:layout_marginStart="@dimen/EdgeMargin" />

    <TextView
        android:id="@+id/orderPrice"
        style="@style/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragmentItemNumberSpacing"
        android:layout_marginStart="@dimen/fragmentItemNumberSpacing"
        android:layout_marginTop="@dimen/fragmentItemMargin"
        android:layout_toRightOf="@id/orderId"
        android:layout_toEndOf="@id/orderId" />

    <TextView
        android:id="@+id/orderCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragmentItemNumberSpacing"
        android:layout_marginStart="@dimen/fragmentItemNumberSpacing"
        android:layout_marginTop="@dimen/fragmentItemMargin"
        android:layout_toRightOf="@id/orderPrice"
...
        android:layout_toRightOf="@id/orderId"
        android:layout_toEndOf="@id/orderId"
        android:layout_marginBottom="@dimen/fragmentItemMargin"
        />

    <TextView
        android:id="@+id/orderStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/priceRightMargin"
        android:layout_marginEnd="@dimen/priceRightMargin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
...
